src/test/ui/traits/vtable/vtable-multi-level.stderr
error: vtable entries for `<S as O>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as A>::foo_a),
           Method(<S as B>::foo_b),
           TraitVPtr(<S as B>),
           Method(<S as C>::foo_c),
           Method(<S as D>::foo_d),
           TraitVPtr(<S as D>),
           Method(<S as E>::foo_e),
           TraitVPtr(<S as E>),
           Method(<S as F>::foo_f),
           TraitVPtr(<S as F>),
           Method(<S as G>::foo_g),
           Method(<S as H>::foo_h),
           TraitVPtr(<S as H>),
           Method(<S as I>::foo_i),
           TraitVPtr(<S as I>),
           Method(<S as J>::foo_j),
           TraitVPtr(<S as J>),
           Method(<S as K>::foo_k),
           TraitVPtr(<S as K>),
           Method(<S as L>::foo_l),
           TraitVPtr(<S as L>),
           Method(<S as M>::foo_m),
           TraitVPtr(<S as M>),
           Method(<S as N>::foo_n),
           TraitVPtr(<S as N>),
           Method(<S as O>::foo_o),
       ]
  --> $DIR/vtable-multi-level.rs:95:1
   |
LL | / trait O: G + N {
LL | |
LL | |     fn foo_o(&self) {}
LL | | }
   | |_^

error: vtable entries for `<S as B>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as B>::foo_b),
       ]
  --> $DIR/vtable-multi-level.rs:19:1
   |
LL | / trait B {
LL | |
LL | |     fn foo_b(&self) {}
LL | | }
   | |_^

error: vtable entries for `<S as D>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as D>::foo_d),
       ]
  --> $DIR/vtable-multi-level.rs:30:1
   |
LL | / trait D {
LL | |
LL | |     fn foo_d(&self) {}
LL | | }
   | |_^

error: vtable entries for `<S as E>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as E>::foo_e),
       ]
  --> $DIR/vtable-multi-level.rs:36:1
   |
LL | / trait E {
LL | |
LL | |     fn foo_e(&self) {}
LL | | }
   | |_^

error: vtable entries for `<S as F>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as D>::foo_d),
           Method(<S as E>::foo_e),
           TraitVPtr(<S as E>),
           Method(<S as F>::foo_f),
       ]
  --> $DIR/vtable-multi-level.rs:42:1
   |
LL | / trait F: D + E {
LL | |
LL | |     fn foo_f(&self) {}
LL | | }
   | |_^

error: vtable entries for `<S as H>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as H>::foo_h),
       ]
  --> $DIR/vtable-multi-level.rs:53:1
   |
LL | / trait H {
LL | |
LL | |     fn foo_h(&self) {}
LL | | }
   | |_^

error: vtable entries for `<S as I>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as I>::foo_i),
       ]
  --> $DIR/vtable-multi-level.rs:59:1
   |
LL | / trait I {
LL | |
LL | |     fn foo_i(&self) {}
LL | | }
   | |_^

error: vtable entries for `<S as J>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as H>::foo_h),
           Method(<S as I>::foo_i),
           TraitVPtr(<S as I>),
           Method(<S as J>::foo_j),
       ]
  --> $DIR/vtable-multi-level.rs:65:1
   |
LL | / trait J: H + I {
LL | |
LL | |     fn foo_j(&self) {}
LL | | }
   | |_^

error: vtable entries for `<S as K>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as K>::foo_k),
       ]
  --> $DIR/vtable-multi-level.rs:71:1
   |
LL | / trait K {
LL | |
LL | |     fn foo_k(&self) {}
LL | | }
   | |_^

error: vtable entries for `<S as L>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as L>::foo_l),
       ]
  --> $DIR/vtable-multi-level.rs:77:1
   |
LL | / trait L {
LL | |
LL | |     fn foo_l(&self) {}
LL | | }
   | |_^

error: vtable entries for `<S as M>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as K>::foo_k),
           Method(<S as L>::foo_l),
           TraitVPtr(<S as L>),
           Method(<S as M>::foo_m),
       ]
  --> $DIR/vtable-multi-level.rs:83:1
   |
LL | / trait M: K + L {
LL | |
LL | |     fn foo_m(&self) {}
LL | | }
   | |_^

error: vtable entries for `<S as N>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as H>::foo_h),
           Method(<S as I>::foo_i),
           TraitVPtr(<S as I>),
           Method(<S as J>::foo_j),
           Method(<S as K>::foo_k),
           TraitVPtr(<S as K>),
           Method(<S as L>::foo_l),
           TraitVPtr(<S as L>),
           Method(<S as M>::foo_m),
           TraitVPtr(<S as M>),
           Method(<S as N>::foo_n),
       ]
  --> $DIR/vtable-multi-level.rs:89:1
   |
LL | / trait N: J + M {
LL | |
LL | |     fn foo_n(&self) {}
LL | | }
   | |_^

error: aborting due to 12 previous errors

